syntax = "proto2";

message Reference {
  required string app = 13;
  optional string name_space = 20;
  required Path path = 14;
  optional string database_id = 23;
}

message Path {
  repeated group Element = 1 {
    required string type = 2;
    optional int64 id = 3;
    optional string name = 4;
  }
}
